fx no.1 A & B - add new page in become a host (welcome back)

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -63527,3 +63527,420 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._1ku51f04.hidden {
   display: none !important;
 }
+
+.cgwn23z[class][class] {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  max-width: 623px;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  -webkit-scrollbar-width: none;
+  -moz-scrollbar-width: none;
+  -ms-scrollbar-width: none;
+  scrollbar-width: none;
+  overflow: hidden;
+}
+
+.dir.cgwn23z[class][class] {
+  background-color: var(--f-mkcy-f);
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+  padding-top: 32px;
+}
+
+@media (min-width: 744px) {
+  .dir.cgwn23z[class][class] {
+    padding-top: 0;
+  }
+}
+
+.l8zl6q8[class][class] {
+  width: 100%;
+}
+
+.dir.l8zl6q8[class][class] {
+  animation-name: listAnimation-l8zl6q8;
+  animation-duration: 600ms;
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+}
+
+@keyframes listAnimation-l8zl6q8 {
+  0% {
+    opacity: 0;
+    transform: translate(0,40%);
+  }
+  100% {
+      opacity: 1;
+      transform: none;
+  }
+}
+
+.a1n3nwiv[class][class] {
+  width: 100%;
+}
+
+.dir.a1n3nwiv[class][class] {
+  padding-bottom: 40px;
+}
+
+@media (min-width: 744px) {
+  .dir.a1n3nwiv[class][class] {
+    padding-bottom: 64px;
+  }
+}
+
+.h169a49r[class][class] {
+  font-size: var(--lhy-d-yl);
+  line-height: var(--fme-bf-w);
+  font-weight: var(--jx-zk-pv);
+}
+
+.dir.h169a49r[class][class] {
+  margin-bottom: 16px;
+  margin-top: 0;
+}
+
+.dir.a1p7fbvz[class][class] {
+  padding-bottom: 12px;
+}
+.a1rgsqn9[class][class] {
+  width: 100%;
+}
+
+._15i50to6 {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0 !important;
+  position: relative !important;
+  text-decoration: none !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--iw-ehf-f) !important;
+  line-height: var(---s-l-myu) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: 12px !important;
+  border-width: var(--button-action-border-width, 2px) !important;
+  border-style: solid !important;
+  outline: none !important;
+  padding-top: 14px !important;
+  padding-bottom: 14px !important;
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+  -webkit-transition: box-shadow 0.2s ease, -webkit-transform 0.1s ease, transform 0.1s ease !important;
+  -moz-transition: box-shadow 0.2s ease, transform 0.1s ease !important;
+  transition: box-shadow 0.2s ease, -ms-transform 0.1s ease, -webkit-transform 0.1s ease, transform 0.1s ease !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border-color: var(--j-qkgmf) !important;
+  background: var(--f-mkcy-f) !important;
+  color: var(--f-k-smk-x) !important;
+  padding: 24px !important;
+  width: 100% !important;
+  text-align: start !important;
+}
+
+._jr600v {
+  -webkit-box-pack: start !important;
+  -ms-flex-pack: start !important;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-flex-direction: row !important;
+  -ms-flex-direction: row !important;
+  flex-direction: row !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  -webkit-justify-content: flex-start !important;
+  justify-content: flex-start !important;
+  pointer-events: none !important;
+}
+
+._cy0new {
+  margin-left: -6px !important;
+  margin-right: 16px !important;
+}
+
+._bc4egv {
+  -webkit-flex: 1 !important;
+  -ms-flex: 1 1 0% !important;
+  flex: 1 !important;
+}
+
+._12s5d6w {
+  margin-left: 16px !important;
+  margin-right: -6px !important;
+}
+
+._1h6n1zu {
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+
+._9ofhsl {
+  height: 0px !important;
+  width: 0px !important;
+  position: absolute !important;
+}
+
+@supports (object-fit: cover) {
+  ._9ofhsl {
+    height: 100% !important;
+    width: 100% !important;
+    position: static !important;
+  }
+}
+
+._15p4g025 {
+    display: inline-block !important;
+    vertical-align: bottom !important;
+    height: 100% !important;
+    width: 100% !important;
+    background-position: 50% 50% !important;
+    background-repeat: no-repeat !important;
+}
+
+@supports (object-fit: cover) {
+  ._15p4g025 {
+    display: none !important;
+    background-image: none !important;
+  }
+}
+
+._1t0jy5tw {
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  overflow-y: auto !important;
+  background: rgb(34, 34, 34) !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_15p0df !important;
+}
+
+@media (min-width: 744px) {
+  ._1t0jy5tw {
+    background: rgb(34, 34, 34) !important;
+  }
+}
+
+._b21f4g {
+  border: 0px !important;
+  clip: rect(0 0 0 0) !important;
+  -webkit-clip-path: inset(100%) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+  margin-top: -1px !important;
+}
+
+._virdaj {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: end !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  max-height: calc(var(--vh, 1vh) * 100) !important;
+  padding-top: 12px !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: flex-end !important;
+  justify-content: center !important;
+}
+
+@supports (max-height: -webkit-fill-available) {
+  ._virdaj {
+    max-height: max(-webkit-fill-available, calc(var(9.77px, 1vh) * 100)) !important;
+  }
+}
+
+@media (min-width: 744px) and (min-height: 475px) {
+  ._virdaj {
+    -webkit-box-align: center !important;
+    padding: 40px !important;
+    align-items: center !important;
+  }
+}
+
+._virdaj.hidden {
+  display: none !important
+}
+
+._pa35zs {
+  position: absolute !important;
+  display: flex !important;
+  top: 16px !important;
+  left: 24px !important;
+  z-index: 1 !important;
+}
+
+@media (min-width: 744px) {
+  ._pa35zs {
+    top: 24px !important;
+  }
+}
+
+._oda838 {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+}
+
+._oda838::before {
+  content: "" !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 32px !important;
+  height: 32px !important;
+  border-radius: 50% !important;
+}
+
+._e296pg {
+  position: relative !important;
+}
+
+._1b0cy6g {
+  -webkit-box-pack: justify !important;
+  -webkit-box-align: center !important;
+  display: flex !important;
+  flex: 0 0 auto !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  padding: 0px 24px !important;
+  min-height: 48px !important;
+  border-bottom: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 800 !important;
+}
+
+@media (min-width: 744px) {
+  ._1b0cy6g {
+    min-height: 64px !important;
+  }
+}
+
+._1x1fv19 {
+  -webkit-box-pack: start !important;
+  padding: 0px 24px !important;
+  flex: 1 1 auto !important;
+  outline: none !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  height: 612px !important;
+  max-height: 85vh !important;
+  overflow-y: scroll !important;
+  overflow-x: none !important;
+  justify-content: flex-start !important;
+}
+
+@media (min-width: 744px) {
+  ._1x1fv19 {
+    max-height: 70vh !important;
+  }
+}
+
+._1tng6ym {
+  -webkit-box-flex: 0 !important;
+  flex: 0 0 16px !important;
+  text-align: left !important;
+}
+
+._9t7ktw {
+  -webkit-box-flex: 0 !important;
+  overflow: hidden !important;
+  flex: 0 1 auto !important;
+  text-align: center !important;
+  margin-left: 16px !important;
+  margin-right: 16px !important;
+}
+
+._rrmdgl {
+  -webkit-box-flex: 0 !important;
+  flex: 0 0 16px !important;
+  text-align: right !important;
+}
+
+._14i3z6h {
+  color: inherit !important;
+  font-size: 1em !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+._1q9sh65 {
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+}
+
+._5xnym8 {
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  margin-top: 24px !important;
+  height: 100% !important;
+}
+
+._zdxht7 {
+  width: 100% !important;
+}
+
+._kf50tk {
+  padding-bottom: 12px !important;
+  width: 100% !important;
+}
+
+._dsadsad {
+  -webkit-box-direction: normal !important; 
+  -webkit-box-orient: vertical !important; 
+  background: rgb(255, 255, 255) !important; 
+  position: relative !important; 
+  width: 100vw !important;
+  max-height: 100% !important; 
+  display: flex !important; 
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  border-top-right-radius: 12px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important; 
+  animation-name: keyframe_1hvlqe7 !important;
+}  
+   
+  
+  
