fx no. 3. A - add profile modal in all pages in become a host

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60919,11 +60919,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   width: auto !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif !important;
+  font-size: 16px !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
-  border-radius: var(--go-h-jh-l) !important;
+  border-radius: 8px !important;
   border-width: 1px !important;
   outline: 0 !important;
   padding-top: 14px !important;
@@ -60961,7 +60961,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
-  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x) !important;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px #222222 !important;
 }
 ._108mstlv:focus-visible::-moz-focus-inner {
   border: none !important;
@@ -60986,7 +60986,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
   transition: box-shadow 0.2s !important;
-  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px var(--f-k-smk-x) !important;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8), 0 0 0 4px #222222 !important;
 }
 ._108mstlv:focus[data-focus-visible-added]::-moz-focus-inner {
   border: none !important;
@@ -61934,7 +61934,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     var(--margin-left, 0);
 }
 .c1bx80b8[class][class] {
-  color: var(--theme_typography-color-primary, var(--f-k-smk-x));
+  color: var(--theme_typography-color-primary, #222222);
   pointer-events: none;
   position: relative;
 }
@@ -62032,7 +62032,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  min-height: var(--f-fw-z-a-i);
+  min-height: 40px;
   white-space: nowrap;
 }
 .pagination-bullets {
@@ -62132,16 +62132,16 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   touch-action: manipulation;
 }
 .vlzgbic[class][class] {
-  font-family: var(--e-ls-qkw);
-  font-size: var(--iw-ehf-f);
+  font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif;
+  font-size: 16px;
   line-height: var(---s-l-myu);
   font-weight: var(--jx-zk-pv);
-  border-radius: var(--go-h-jh-l);
+  border-radius: 8px;
   outline: 0;
   padding: 14px 24px;
   transition: box-shadow 0.2s, transform 0.1s;
   align-items: center;
-  color: var(--f-k-smk-x);
+  color: #222222;
   display: inline-flex;
   justify-content: center;
   -webkit-transition: -webkit-transform 0.25s;
@@ -62227,20 +62227,20 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .s15vsdt[class][class] .sfqq6w5[class][class] {
   display: flex;
   align-items: center;
-  color: var(--star-rating_icon-color, var(--f-k-smk-x));
+  color: var(--star-rating_icon-color, #222222);
 }
 .s15vsdt[class][class] .rpz7y38[class][class] {
-  color: var(--star-rating_value-color, var(--f-k-smk-x));
+  color: var(--star-rating_value-color, #222222);
 }
 .s15vsdt[class][class] .r1xr6rtg[class][class] {
   color: var(--star-rating_count-color, var(--fo-jk-r-s));
 }
 .o1n80548[class][class] {
-  color: var(--theme_typography-color-primary, var(--f-k-smk-x));
-  font-weight: var(--e-y-j-d-v-j);
+  color: var(--theme_typography-color-primary, #222222);
+  font-weight: 400;
 }
 .oh3h96u[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: 16px;
   line-height: var(---s-l-myu);
   line-height: var(---s-l-myu);
   overflow: hidden;
@@ -62284,7 +62284,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 .t1jmf1i1[class][class] {
-  font-size: var(--iw-ehf-f);
+  font-size: 16px;
   line-height: var(---s-l-myu);
   line-height: var(---s-l-myu);
   overflow: hidden;
@@ -62294,7 +62294,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   -webkit-line-clamp: var(--title_max-num-lines, 1);
 }
 .ts5gl90[class][class] {
-  font-weight: var(--title_font-weight, var(--e-y-j-d-v-j));
+  font-weight: var(--title_font-weight, 400);
 }
 .dir.pzfo4tk[class][class] {
   margin-top: var(--h-x-sf-jw);
@@ -63544,7 +63544,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 .dir.cgwn23z[class][class] {
-  background-color: var(--f-mkcy-f);
+  background-color: #ffffff;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 40px;
@@ -63619,8 +63619,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   text-decoration: none !important;
   -ms-touch-action: manipulation !important;
   touch-action: manipulation !important;
-  font-family: var(--e-ls-qkw) !important;
-  font-size: var(--iw-ehf-f) !important;
+  font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif !important;
+  font-size: 16px !important;
   line-height: var(---s-l-myu) !important;
   font-weight: var(--jx-zk-pv) !important;
   border-radius: 12px !important;
@@ -63636,8 +63636,8 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   transition: box-shadow 0.2s ease, -ms-transform 0.1s ease, -webkit-transform 0.1s ease, transform 0.1s ease !important;
   -webkit-tap-highlight-color: transparent !important;
   border-color: var(--j-qkgmf) !important;
-  background: var(--f-mkcy-f) !important;
-  color: var(--f-k-smk-x) !important;
+  background: #ffffff !important;
+  color: #222222 !important;
   padding: 24px !important;
   width: 100% !important;
   text-align: start !important;
@@ -63941,3 +63941,478 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   animation-fill-mode: both !important; 
   animation-name: keyframe_1hvlqe7 !important;
 }
+
+._ybk1kl0 {
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  overflow-y: auto !important;
+  background: rgb(34, 34, 34) !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_15p0df !important;
+}
+
+@media (min-width: 744px) {
+  ._ybk1kl0 {
+    background: transparent !important;
+  }
+}
+
+._g2ext {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  max-height: calc(var(9.77px, 1vh) * 100) !important;
+  padding: 12px !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+@supports (max-height: -webkit-fill-available) {
+  ._g2ext {
+    max-height: max(-webkit-fill-available, calc(var(9.77px, 1vh) * 100)) !important;
+  }
+}
+
+@media (min-height: 600px) {
+  ._g2ext {
+    padding-top: 96px !important;
+    padding-bottom: 96px !important;
+  }
+}
+
+._g2ext.hidden {
+  display: none !important;
+}
+
+._5wyy9re {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  width: 375px !important;
+  max-width: 100% !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  border-radius: 12px !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  overflow: hidden !important;
+}
+
+._1wv4knt {
+  position: absolute !important;
+  display: flex !important;
+  top: 24px !important;
+  left: 24px !important;
+  z-index: 1 !important;
+}
+
+@media (min-width: 744px) {
+  ._1wv4knt {
+    top: 24px !important;
+  }
+}
+
+._9yyjz9 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  height: 100% !important;
+  min-height: 300px !important;
+}
+
+@media (min-width: 744px) {
+  ._9yyjz9 {
+    overflow: hidden !important;
+    border-bottom-left-radius: 12px !important;
+    border-bottom-right-radius: 12px !important;
+  }
+}
+
+._1tng6ym {
+  -webkit-box-flex: 0 !important;
+  flex: 0 0 16px !important;
+  text-align: left !important;
+}
+
+._9t7ktw {
+  -webkit-box-flex: 0 !important;
+  overflow: hidden !important;
+  flex: 0 1 auto !important;
+  text-align: center !important;
+  margin-left: 16px !important;
+  margin-right: 16px !important;
+}
+
+._rrmdgl {
+  -webkit-box-flex: 0 !important;
+  flex: 0 0 16px !important;
+  text-align: right !important;
+}
+
+._14i3z6h {
+  color: inherit !important;
+  font-size: 1em !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+._1q9sh65 {
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+}
+
+._ce5b56 {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+._1v1onhz {
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 600 !important;
+  color: rgb(34, 34, 34) !important;
+}
+
+._1fq9ae3 {
+  font-size: 12px !important;
+  line-height: 16px !important;
+  color: rgb(113, 113, 113) !important;
+  font-weight: 400 !important;
+}
+
+._5kaapu {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+}
+
+._uy2bhv {
+  flex: 1 1 auto !important;
+  position: relative !important;
+}
+._uy2bhv {
+  padding-top: 24px !important;
+}
+
+._1eaes69 {
+  flex: 0 0 auto !important;
+}
+
+._f4l4c1 {
+  position: absolute !important;
+  inset: 0px !important;
+  overflow: hidden auto !important;
+}
+
+._1l3b5m2 {
+  margin: 0px auto !important;
+  max-width: 688px !important;
+}
+
+._19tv2yy {
+  position: relative !important;
+  padding-top: 2px !important;
+}
+
+._c015vz2 {
+  margin: 0px 2px !important;
+  outline: none !important;
+}
+
+._bt0ez1 {
+  padding: 24px 22px 0px !important;
+  margin-bottom: 10px !important;
+  text-align: center !important;
+  color: rgb(113, 113, 113) !important;
+  font-weight: 800 !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+}
+
+._1w193fh {
+  max-width: 688px !important;
+}
+
+._1f6woba {
+  position: relative !important;
+  border-radius: 12px !important;
+  background-color: transparent !important;
+}
+
+._bc4egv {
+  flex: 1 1 0% !important;
+}
+
+._1f4kzn0 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  display: flex !important;
+  flex-direction: row !important;
+  padding: 12px 20px !important;
+  background-color: rgb(247, 247, 247) !important;
+  border-radius: 36px !important;
+}
+
+._1fvwakm0 {
+  vertical-align: top !important;
+  text-align: right !important;
+  margin-right: 12px !important;
+  color: rgb(113, 113, 113) !important;
+  margin-top: 2px !important;
+}
+
+._1eg8y1b {
+  flex: 1 1 1px !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  color: rgb(113, 113, 113) !important;
+  font-weight: 800 !important;
+}
+
+.a8jt5op[class][class] {
+  -webkit-clip: rect(0 0 0 0);
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.dir.a8jt5op[class][class] {
+  border: 0;
+  padding: 0;
+}
+
+._1eg8y1b {
+  flex: 1 1 1px !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  color: rgb(113, 113, 113) !important;
+  font-weight: 800 !important;
+}
+
+._1x9f0ie {
+  font-weight: 800 !important;
+  color: rgb(113, 113, 113) !important;
+  text-decoration: underline rgb(113, 113, 113) !important;
+}
+
+._c015vz2 {
+  margin: 0px 2px !important;
+  outline: none !important;
+}
+
+._1lnubva {
+  -webkit-box-direction: reverse !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  display: flex !important;
+  flex-direction: column-reverse !important;
+  position: absolute !important;
+  bottom: 0px !important;
+  left: 0px !important;
+  width: calc(100% - 16px) !important;
+}
+
+.o1f1deyb[class][class] {
+  max-width: 688px;
+}
+
+.dir.o1f1deyb[class][class] {
+  margin: 0 auto;
+}
+
+.cp68eyg[class][class] {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-grow: 1;
+}
+.dir-ltr.cp68eyg[class][class] {
+  margin: 0 24px 4px 11px;
+}
+
+._1icr19o {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  margin-right: 8px !important;
+  margin-bottom: 12px !important;
+  align-self: flex-end !important;
+  display: flex !important;
+  flex-direction: row !important;
+  transition: width 0.3s ease-out 0s !important;
+}
+
+.w1ltfm8b[class][class] {
+  width: 100%;
+}
+
+._124iqfn {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  height: 48px !important;
+  width: 48px !important;
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+._pfn378 {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+}
+
+._pfn378::before {
+  content: "" !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 38px !important;
+  height: 38px !important;
+  border-radius: 50% !important;
+}
+
+._e296pg {
+  position: relative !important;
+}
+
+.l1sc6kfc[class][class] {
+  -webkit-clip: rect(0 0 0 0);
+  clip: rect(0 0 0 0);
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.dir.l1sc6kfc[class][class] {
+  border: 0;
+  padding: 0;
+}
+
+.c1w12wz0[class][class] {
+  box-shadow: inset 0 0 0 1px grey;
+  box-sizing: border-box;
+  color: #222222;
+  border-radius: 8px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  flex-grow: 1;
+  position: relative;
+}
+
+.dir.c1w12wz0[class][class] {
+  box-shadow: inset 0 0 0 1px #b0b0b0;
+  padding: 2px;
+  margin: 14px 0;
+  border-radius: 20px;
+}
+
+
+.t17tp91i[class][class] {
+  color: inherit;
+  display: block;
+  min-width: 100%;
+  max-width: 100%;
+  outline: none;
+  box-sizing: border-box;
+  background-color: transparent;
+  -webkit-appearance: none;
+  padding: 8px;
+  font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  min-width: auto;
+  resize: none;
+  width: 100%;
+  min-height: 40px;
+  flex-grow: 1;
+  line-height: 22px;
+}
+
+.t1md6muk[class][class] {
+  max-height: 40px;
+}
+
+.dir.t17tp91i[class][class] {
+  border: none;
+  margin: 0;
+  padding: 9px 8px;
+  border-width: 0;
+  background-color: #ffffff;
+  border-radius: 20px;
+}
+
+.dir-ltr.t17tp91i[class][class] {
+  margin-right: 1px;
+}
+
+._1tbjv3ch {
+  -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    background: rgb(255, 255, 255) !important;
+    width: 375px !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
+    display: flex !important;
+    flex-direction: column !important;
+    border-radius: 12px !important;
+    box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+    overflow: hidden !important;
+    animation-name: keyframe_nzi634 !important;
+    animation-duration: 400ms !important;
+    animation-fill-mode: both !important;
+    animation-iteration-count: 1 !important;
+}
+
