fix scrollbar hiding when opening modal

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4158,6 +4158,10 @@ html :where(img[class*='wp-image-']) {
 .hidden-scrollbar::-webkit-scrollbar {
   display: none !important;
 }
+.hidden-vscroll {
+  overflow-y: hidden;
+  padding-right: 15px;
+}
 .overflow-y-hidden {
   overflow-y: hidden;
 }
