--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -51912,6 +51912,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     ) !important;
   }
 }
+
+._vxvq8x.hidden {
+  display: none !important
+}
+
 .modal__close {
   position: absolute !important;
   display: flex !important;
@@ -64416,3 +64421,206 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     animation-iteration-count: 1 !important;
 }
 
+._1t0jy5tw {
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  overflow-y: auto !important;
+  background: rgb(34, 34, 34) !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_15p0df !important;
+}
+
+._vxvq8x {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: end !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  max-height: calc(var(8.96px, 1vh) * 100) !important;
+  padding-top: calc(12px + env(safe-area-inset-top, 0)) !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: flex-end !important;
+  justify-content: center !important;
+}
+
+@supports (max-height: -webkit-fill-available) {
+  ._vxvq8x {
+    max-height: max(-webkit-fill-available, calc(var(8.96px, 1vh) * 100)) !important;
+  }
+}
+
+._njcq40o {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  position: relative !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  border-top-left-radius: 12px !important;
+  border-top-right-radius: 12px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_d37zz3 !important;
+  height: 100% !important;
+  padding-bottom: env(safe-area-inset-bottom, 0) !important;
+}
+
+._pa35zs {
+  position: absolute !important;
+  display: flex !important;
+  top: 16px !important;
+  left: 24px !important;
+  z-index: 1 !important;
+}
+
+._1youxq0 {
+  -webkit-box-pack: justify !important;
+  -webkit-box-align: center !important;
+  display: flex !important;
+  flex: 0 0 auto !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  padding: 0px 24px !important;
+  min-height: 48px !important;
+  border-bottom: 1px solid rgb(235, 235, 235) !important;
+  color: rgb(34, 34, 34) !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 800 !important;
+}
+
+._9yyjz9 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: flex !important;
+  flex-direction: column !important;
+  height: 100% !important;
+  min-height: 300px !important;
+}
+
+._oda838 {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+}
+
+._oda838::before {
+  content: "" !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 32px !important;
+  height: 32px !important;
+  border-radius: 50% !important;
+}
+
+._pcw78nw {
+  position: relative !important;
+  border-radius: 12px !important;
+  background-color: rgb(247, 247, 247) !important;
+  box-shadow: rgb(247 247 247) 0px 0px 0px 4px !important;
+}
+
+.sn9vk1f[class][class] {
+  height: var(--ic-zlb-s);
+  opacity: 1;
+}
+
+.s1sc6kfc[class][class] {
+  opacity: 0;
+}
+
+.dir.sn9vk1f[class][class] {
+  margin: 6px;
+  margin-bottom: var(--fgg-f-l-a);
+  transition-duration: 0.5s;
+}
+
+.dir.s1sc6kfc[class][class] {
+  cursor: default;
+}
+
+._19kjbw4 {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+}
+
+._19kjbw4::before {
+  content: "" !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 26px !important;
+  height: 26px !important;
+  border-radius: 50% !important;
+}
+
+._iwziubj {
+  -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    background: rgb(255, 255, 255) !important;
+    background: #fff !important;
+    position: relative !important;
+    width: 375px !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
+    display: flex !important;
+    flex-direction: column !important;
+    border-radius: 12px !important;
+    box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+    border-top-left-radius: 12px !important;
+    border-top-right-radius: 12px !important;
+    overflow: hidden !important;
+    animation-name: keyframe_1hvlqe7 !important;
+    animation-duration: 400ms !important;
+    animation-fill-mode: both !important;
+    animation-iteration-count: 1 !important;
+}
+
+@media (max-width: 744px) {
+  .max-hidden-md {
+    display: none !important;
+  }
+}
+
+@media (min-width: 745px) {
+  .min-hidden-md {
+    display: none !important;
+  }
+}
