Add keyboard shortcuts modal

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -64862,3 +64862,66 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     animation-iteration-count: 1 !important;
 }
 
+@media (min-width: 744px) {
+  ._1pusc02v {
+    width: 100% !important;
+    max-width: 376px !important;
+    border-radius: 12px !important;
+  }
+}
+
+._8qxe72 {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-weight: 400 !important;
+  padding: 40px 32px 32px !important;
+  flex: 1 1 auto !important;
+  overflow: auto !important;
+}
+
+._xbompo {
+  font-size: 18px !important;
+  line-height: 22px !important;
+  font-weight: 600 !important;
+  outline: 0px !important;
+}
+
+._5bnvls {
+  list-style: none !important;
+  margin: 48px 0px 32px !important;
+  padding: 0px !important;
+}
+
+._dj4nch {
+  display: flex !important;
+  margin-bottom: 20px !important;
+}
+
+._6oj9h5 {
+  width: 30% !important;
+}
+
+._14tod1h {
+  font-size: 12px !important;
+  line-height: 16px !important;
+  font-weight: 600 !important;
+  font-family: monospace !important;
+  text-transform: uppercase !important;
+  background: rgb(247, 247, 247) !important;
+  border-radius: 4px !important;
+  padding: 4px 8px !important;
+}
+
+._mdeyt9 {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  color: rgb(113, 113, 113) !important;
+  width: 70% !important;
+}
+
+._7i2ej1 {
+  -webkit-box-align: end !important;
+  display: flex !important;
+  align-items: flex-end !important;
+  flex-flow: column wrap !important;
+}
