--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -64624,3 +64624,385 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     display: none !important;
   }
 }
+
+._1p1cugo {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: end !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  z-index: 2000 !important;
+  position: fixed !important;
+  inset: 0px !important;
+  max-height: calc(var(--vh, 1vh) * 100) !important;
+  padding-top: 0px !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: flex-end !important;
+  justify-content: center !important;
+}
+
+@supports (max-height: -webkit-fill-available) {
+  ._1p1cugo {
+    max-height: max(-webkit-fill-available, calc(var(--vh, 1vh) * 100)) !important;
+  }
+}
+
+@media (min-width: 744px) and (min-height: 475px) {
+  ._1p1cugo {
+    -webkit-box-align: center !important;
+    padding: 40px !important;
+    align-items: center !important;
+  }
+}
+
+._1p1cugo.hidden {
+  display: none !important;
+}
+
+._mtm84lo {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(0, 0, 0) !important;
+  position: relative !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_x3nd0a !important;
+  height: 100% !important;
+  border-radius: 0px !important;
+}
+
+@media (min-width: 744px) {
+  ._mtm84lo {
+    width: 375px !important;
+    max-width: 568px !important;
+    border-radius: 0px !important;
+    position: fixed !important;
+    top: 0px !important;
+    right: 0px !important;
+    bottom: 0px !important;
+    animation-name: keyframe_ga7xnj !important;
+  }
+}
+
+._o4zczix {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(0, 0, 0) !important;
+  position: relative !important;
+  width: 100vw !important;
+  max-width: 100vw !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_12p8qan !important;
+  height: 100% !important;
+  border-radius: 0px !important;
+}
+
+@media (min-width: 744px) {
+  ._o4zczix {
+    width: 375px !important;
+    max-width: 568px !important;
+    border-radius: 0px !important;
+    position: fixed !important;
+    top: 0px !important;
+    right: 0px !important;
+    bottom: 0px !important;
+    animation-name: keyframe_12p8qan !important;
+  }
+}
+
+
+._m4pg2z {
+  position: absolute !important;
+  display: flex !important;
+  top: 16px !important;
+  right: 24px !important;
+}
+
+@media (min-width: 744px) {
+  ._m4pg2z {
+    top: 24px !important;
+    left: 24px !important;
+  }
+}
+
+._y74zq {
+  -webkit-box-pack: justify !important;
+  -webkit-box-align: center !important;
+  display: flex !important;
+  flex: 0 0 auto !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  padding: 0px 24px !important;
+  min-height: 64px !important;
+  border-bottom: 0px !important;
+  color: rgb(255, 255, 255) !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 800 !important;
+}
+
+@media (min-width: 744px) {
+  ._y74zq {
+    min-height: 64px !important;
+  }
+}
+
+._1wg7rw {
+  padding: 24px !important;
+  flex: 1 1 auto !important;
+  overflow-y: auto !important;
+  outline: none !important;
+  color: rgb(255, 255, 255) !important;
+}
+
+._4ijurz {
+  appearance: none !important;
+  display: inline-block !important;
+  border-radius: 50% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(255, 255, 255) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  position: relative !important;
+  background: transparent !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
+}
+
+._4ijurz::before {
+  content: "" !important;
+  display: block !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  width: 32px !important;
+  height: 32px !important;
+  border-radius: 50% !important;
+  background: transparent !important;
+}
+
+._13lde72 {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+  color: rgb(255, 255, 255) !important;
+}
+
+._4y54ze {
+  margin-top: 40px !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_14ic1xm !important;
+}
+
+@media (min-width: 744px) {
+  ._4y54ze {
+    animation-name: none !important;
+  }
+}
+
+._4y54ze:first-child {
+  margin-top: 0px !important;
+}
+
+._kedp3u {
+  font-size: 18px !important;
+  line-height: 22px !important;
+  font-weight: 600 !important;
+}
+
+._lvhhqo {
+  margin-top: 16px !important;
+  position: relative !important;
+}
+
+._14i3z6h {
+  color: inherit !important;
+  font-size: 1em !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+._15ut2yit {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-decoration: none !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--iw-ehf-f) !important;
+  line-height: var(---s-l-myu) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: 12px !important;
+  outline: none !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  padding: 16px !important;
+  width: 100% !important;
+  text-align: start !important;
+  border: 1px solid transparent !important;
+  background: rgb(34, 34, 34) !important;
+  color: rgb(255, 255, 255) !important;
+  height: 100% !important;
+}
+
+._jr600v {
+  -webkit-box-pack: start !important;
+  -ms-flex-pack: start !important;
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-flex-direction: row !important;
+  -ms-flex-direction: row !important;
+  flex-direction: row !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  -webkit-justify-content: flex-start !important;
+  justify-content: flex-start !important;
+  pointer-events: none !important;
+}
+
+._1wiynur {
+  margin-left: 0px !important;
+  margin-right: 16px !important;
+}
+
+._f9uxok {
+  color: rgb(255, 255, 255) !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+
+._1cecj8q {
+  margin-top: 4px !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  color: rgb(255, 255, 255) !important;
+  font-weight: 400 !important;
+}
+._tx7p69r {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-decoration: none !important;
+  font-size: 14px !important;
+  font-family: inherit !important;
+  touch-action: manipulation !important;
+  padding: 0px !important;
+  border-radius: 12px !important;
+  overflow: hidden !important;
+  text-align: left !important;
+  border: 1px solid rgb(34, 34, 34) !important;
+  background: rgb(34, 34, 34) !important;
+  color: rgb(255, 255, 255) !important;
+  outline: none !important;
+  width: 100% !important;
+}
+
+._v0gz4uz {
+  padding-top: var(--dls-liteimage-padding-top) !important;
+  position: relative !important;
+  flex: 1 1 0% !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+
+._1cfbqt9 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  padding: 16px !important;
+  display: flex !important;
+  flex-direction: column !important;
+  border-bottom-left-radius: 12px !important;
+  border-bottom-right-radius: 12px !important;
+}
+
+._4626ulj {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  position: absolute !important;
+  inset: 0px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+._10xjrv2u {
+  display: inline-block !important;
+  vertical-align: bottom !important;
+  height: 100% !important;
+  width: 100% !important;
+  position: absolute !important;
+  inset: 0px !important;
+  background-position: 50% 50% !important;
+  background-repeat: no-repeat !important;
+}
+
+@supports (object-fit: cover) {
+  ._10xjrv2u {
+    display: none !important;
+    background-image: none !important;
+  }
+}
+
+._1cfbqt9 {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  padding: 16px !important;
+  display: flex !important;
+  flex-direction: column !important;
+  border-bottom-left-radius: 12px !important;
+  border-bottom-right-radius: 12px !important;
+}
+
+._x4r3u7 {
+  color: rgb(255, 255, 255) !important;
+  font-size: 14px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 2 !important;
+  -webkit-box-orient: vertical !important;
+}
+
+@supports (overflow: clip) {
+  ._x4r3u7 {
+    overflow: clip !important;
+  }
+}
+
+._wfgfvf {
+  margin-top: 4px !important;
+  color: rgb(255, 255, 255) !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+}
