fx no. 3 E - apply exit modal both desktop & mobiel

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -52782,6 +52782,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   box-shadow: rgb(0 0 0 / 28%) 0 8px 28px !important;
   overflow: hidden !important;
 }
+
 ._10ndlvp {
   position: relative !important;
   display: inline-block !important;
@@ -65005,4 +65006,105 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: rgb(255, 255, 255) !important;
   font-size: 12px !important;
   line-height: 16px !important;
+}
+
+._ewwxwe {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: rgb(255, 255, 255) !important;
+  width: 400px !important;
+  max-width: 100% !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  border-radius: 12px !important;
+  box-shadow: rgb(0 0 0 / 28%) 0px 8px 28px !important;
+  overflow: hidden !important;
+}
+
+._12kfhdn {
+  padding: 24px !important;
+  flex: 1 1 auto !important;
+  overflow-y: auto !important;
+  outline: none !important;
+}
+
+._3joskp {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  color: rgb(34, 34, 34) !important;
+}
+
+._1gty68l {
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  width: 100% !important;
+  display: flex !important;
+  flex-direction: column-reverse !important;
+  align-items: center !important;
+}
+
+@media (min-width: 744px) {
+  ._1gty68l {
+    -webkit-box-pack: justify !important;
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: horizontal !important;
+    flex-direction: row !important;
+    justify-content: space-between !important;
+  }
+}
+
+._1m110ux {
+  width: 100% !important;
+  margin-bottom: 22px !important;
+}
+
+@media (min-width: 744px) {
+  ._1m110ux {
+    margin-bottom: 0px !important;
+    width: auto !important;
+  }
+}
+
+._148dgdpk {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  touch-action: manipulation !important;
+  font-family: 'Circular',-apple-system,'BlinkMacSystemFont','Roboto','Helvetica Neue',sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 600 !important;
+  border-radius: 8px !important;
+  outline: none !important;
+  padding: 14px 24px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  background: #222 !important;
+  color: #FFF !important;
+  contain: paint !important;
+  width: 100% !important;
+}
+
+._1m9khubh {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  background: #fff !important;
+  width: 400px !important;
+  max-width: 100% !important;
+  max-height: 100% !important;
+  display: flex !important;
+  flex-direction: column !important;
+  border-radius: 12px !important;
+  box-shadow: rgb(0 0 0 / 28%) 0 8px 28px !important;
+  overflow: hidden !important;
+  animation-duration: 400ms !important;
+  animation-iteration-count: 1 !important;
+  animation-fill-mode: both !important;
+  animation-name: keyframe_nzi634 !important;
 }
