fx no. 3 F - justify content between

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -30337,7 +30337,7 @@ tr.hide {
 @media (max-width: 744px) {
   .become-a-host__footer-next {
     margin-right: 24px !important;
-    width: 100% !important;
+    /* width: 100% !important; */
     margin-left: 24px !important;
   }
   .become-a-host__footer-lets-go {
