--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -65760,3 +65760,4 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   animation-fill-mode: both !important;
   animation-name: keyframe_nzi634 !important;
 }
+}
