--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -8100,7 +8100,7 @@
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   appearance: none !important;
-  display: inline-flex !important;
+  display: inline-flex;
   border-radius: 50% !important;
   border: 1px solid #b0b0b0 !important;
   outline: 0 !important;
