--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -29513,7 +29513,7 @@ tr.hide {
   }
 }
 .become-a-host__loc-map-search-wrapper {
-  border-radius: 78px !important;
+  border-radius: 32px 32px 16px 16px !important;
   background-color: transparent !important;
 }
 @media (min-width: 744px) {
@@ -29685,8 +29685,8 @@ tr.hide {
   }
 }
 .become-a-host__search-input-wrapper {
-  margin-top: 32px !important;
-  border-radius: 78px !important;
+  margin-top: 12rem !important;
+  border-radius: 0px !important;
   -webkit-transition: -webkit-transform 0.6s, transform 0.6s !important;
   -moz-transition: transform 0.6s !important;
   transition: -ms-transform 0.6s, -webkit-transform 0.6s, transform 0.6s !important;
@@ -29752,7 +29752,7 @@ tr.hide {
   min-height: 48px !important;
   width: 100% !important;
   margin: 0 !important;
-  border: none !important;
+  border: 2px solid !important;
   color: #222 !important;
   background-color: #fff !important;
   height: unset !important;
@@ -65833,4 +65833,84 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
   font-weight: 600 !important;
   text-decoration: underline !important;
+}
+
+
+._1p5zqcr {
+  list-style: none !important;
+  margin: 0px !important;
+  padding: 16px 0px 0px !important;
+}
+
+
+@media (min-width: 744px) {
+  ._1p5zqcr {
+    max-height: calc(50vh - 80px) !important;
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
+    -webkit-mask-image: -webkit-radial-gradient(center, white, black) !important;
+    border-radius: 0px 0px 12px 12px !important;
+  }
+}
+._1ls6jxc {
+  -webkit-box-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: horizontal !important;
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: center !important;
+  padding: 16px 32px !important;
+  border-bottom: 1px solid rgb(235, 235, 235) !important;
+  cursor: pointer !important;
+  appearance: none !important;
+  background: transparent !important;
+  text-align: left !important;
+  width: 100% !important;
+}
+
+@media (min-width: 744px) {
+  ._1ls6jxc {
+    border: none !important;
+    padding: 12px 16px !important;
+  }
+}
+
+._k6xoo0 {
+  cursor: pointer !important;
+  font-weight: 600 !important;
+  text-decoration: underline !important;
+  padding: 16px 32px 24px !important;
+}
+
+@media (min-width: 744px) {
+  ._k6xoo0 {
+    padding-left: 16px !important;
+    padding-right: 16px !important;
+  }
+}
+
+._17z6oac {
+  background-color: rgb(247, 247, 247) !important;
+  border-radius: 50% !important;
+  padding: 12px !important;
+  margin-right: 12px !important;
+  width: 40px !important;
+  height: 40px !important;
+  margin-left: 4px !important;
+}
+
+@media (min-width: 744px) {
+  ._17z6oac {
+    margin-left: unset !important;
+  }
+}
+
+._4gelgl {
+  font-size: 16px !important;
+  line-height: 20px !important;
+}
+
+._1ir6ymk {
+  font-size: 14px !important;
+  line-height: 18px !important;
 }
